--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="medium_padding">16dp</dimen>
     <dimen name="large_margin">24dp</dimen>
     <dimen name="x_large_margin">64dp</dimen>
+
+
+    <dimen name="small_padding">8dp</dimen>
+    <dimen name="big_padding">16dp</dimen>
+    <dimen name="min_height">48dp</dimen>
 </resources>
