--- a/app/src/main/res/layout/fragment_buttons.xml
+++ b/app/src/main/res/layout/fragment_buttons.xml
@@ -19,7 +19,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".hilt.ui.HiltMainActivity">
+    tools:context=".ioc.hilt.ui.HiltMainActivity">
 
     <TextView
         android:id="@+id/textView"
