--- a/app/src/main/res/layout/activity_main_navigation_sample.xml
+++ b/app/src/main/res/layout/activity_main_navigation_sample.xml
@@ -21,8 +21,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
-    tools:context="com.example.android.navigationsample.MainActivity">
+    android:background="@android:color/background_light">
 
     <androidx.fragment.app.FragmentContainerView
             android:id="@+id/my_nav_host_fragment"
