--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -14,11 +14,15 @@
   ~ limitations under the License.
   -->
 
-<TextView
+<Button
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/text"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="18sp"
     android:gravity="center"
-    android:padding="20dp"/>
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+    android:padding="10dp"/>
