--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="fragment_horizontal_margin">16dp</dimen>
     <dimen name="fragment_vertical_margin">16dp</dimen>
+
+    <!-- Bus stop list items -->
+    <dimen name="bus_stop_item_horizontal_padding">16dp</dimen>
+    <dimen name="bus_stop_item_vertical_padding">8dp</dimen>
 </resources>
