--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,7 @@
 
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
+    <color name="purple_200">#FFBB86FC</color>
 
+    <color name="red_700">#FFD32F2F</color>
 </resources>
