--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,7 @@
     <!-- Bus stop list items -->
     <dimen name="bus_stop_item_horizontal_padding">16dp</dimen>
     <dimen name="bus_stop_item_vertical_padding">8dp</dimen>
+
+    <dimen name="margin">16dp</dimen>
+    <dimen name="margin_between_elements">8dp</dimen>
 </resources>
