--- a/app/src/main/res/navigation/nav_graph_room.xml
+++ b/app/src/main/res/navigation/nav_graph_room.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph_room">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph_room"
+    app:startDestination="@id/roomListFragment">
 
+    <fragment
+        android:id="@+id/roomListFragment"
+        android:name="com.xxh.jetpacksample.room.RoomListFragment"
+        tools:layout="@layout/content_list"
+        android:label="RoomListFragment" >
+
+        <action
+            android:id="@+id/action_roomListFragment_to_nav_graph_room_word"
+            app:destination="@id/nav_graph_room_word" />
+        <action
+            android:id="@+id/action_roomListFragment_to_nav_graph_room_bus_schedule"
+            app:destination="@id/nav_graph_room_bus_schedule" />
+        <action
+            android:id="@+id/action_roomListFragment_to_nav_graph_room_inventory"
+            app:destination="@id/nav_graph_room_inventory" />
+    </fragment>
+
+    <include app:graph="@navigation/room_word"/>
+    <include app:graph="@navigation/room_bus_schedule"/>
+    <include app:graph="@navigation/room_inventory"/>
 </navigation>
