手动依赖注入示例

--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ioc.example.ExampleActivity">
+    tools:context=".ioc.example.hilt.ExampleActivity">
 
     <TextView
         android:id="@+id/tv"
