--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,11 @@
 
     <dimen name="margin">16dp</dimen>
     <dimen name="margin_between_elements">8dp</dimen>
+
+
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="comment_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="comment_padding">8dp</dimen>
+    <dimen name="comment_minHeight">64dp</dimen>
 </resources>
