--- a/ui/src/main/res/layout/fragment_recycler_view.xml
+++ b/ui/src/main/res/layout/fragment_recycler_view.xml
@@ -13,6 +13,11 @@
             android:layout_width="wrap_content"
             android:text="@string/flower_sample"
             android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/logger_sample"
+            android:layout_width="wrap_content"
+            android:text="@string/logger_sample"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
     <com.google.android.material.tabs.TabLayout
