--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -19,4 +19,6 @@
     <dimen name="spacer_small">5dp</dimen>
     <dimen name="halfPageMargin">16dp</dimen><!-- half of distance between pages -->
     <dimen name="peekOffset">50dp</dimen><!-- how much of adjacent pages is shown -->
+
+    <dimen name="list_item_height">72dp</dimen>
 </resources>
