--- a/ui/src/main/res/layout-w720dp/activity_logger.xml
+++ b/ui/src/main/res/layout-w720dp/activity_logger.xml
@@ -49,7 +49,7 @@
             android:background="@android:color/darker_gray" />
 
         <fragment
-            android:name="com.xxh.learn.ui.layout.recyclerview.recyclersample.logger.common.logger.LogFragment"
+            android:name="com.xxh.learn.ui.layout.common.logger.LogFragment"
             android:id="@+id/log_fragment"
             android:layout_width="match_parent"
             android:layout_height="0px"
