--- a/ui/src/main/res/layout/activity_logger.xml
+++ b/ui/src/main/res/layout/activity_logger.xml
@@ -43,7 +43,7 @@
         </ScrollView>
 
         <fragment
-            android:name="com.xxh.learn.ui.layout.recyclerview.recyclersample.logger.common.logger.LogFragment"
+            android:name="com.xxh.learn.ui.layout.common.logger.LogFragment"
             android:id="@+id/log_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
