--- a/ui/src/main/res/navigation/nav_graph_layout.xml
+++ b/ui/src/main/res/navigation/nav_graph_layout.xml
@@ -20,6 +20,9 @@
         <action
             android:id="@+id/action_layoutListFragment_to_browseActivity"
             app:destination="@id/browseActivity" />
+        <action
+            android:id="@+id/action_layoutListFragment_to_swipeRefreshActivity"
+            app:destination="@id/swipeRefreshActivity" />
     </fragment>
     <fragment
         android:id="@+id/recyclerViewFragment"
@@ -35,4 +38,8 @@
         android:id="@+id/browseActivity"
         android:name="com.xxh.learn.ui.layout.viewpager2.BrowseActivity"
         android:label="BrowseActivity" />
+    <activity
+        android:id="@+id/swipeRefreshActivity"
+        android:name="com.xxh.learn.ui.layout.swiperefresh.SwipeRefreshActivity"
+        android:label="SwipeRefreshActivity" />
 </navigation>
