--- a/ui/src/main/res/navigation/nav_graph_layout.xml
+++ b/ui/src/main/res/navigation/nav_graph_layout.xml
@@ -23,6 +23,9 @@
         <action
             android:id="@+id/action_layoutListFragment_to_swipeRefreshActivity"
             app:destination="@id/swipeRefreshActivity" />
+        <action
+            android:id="@+id/action_layoutListFragment_to_cardViewFragment"
+            app:destination="@id/cardViewFragment" />
     </fragment>
     <fragment
         android:id="@+id/recyclerViewFragment"
@@ -42,4 +45,8 @@
         android:id="@+id/swipeRefreshActivity"
         android:name="com.xxh.learn.ui.layout.swiperefresh.SwipeRefreshActivity"
         android:label="SwipeRefreshActivity" />
+    <fragment
+        android:id="@+id/cardViewFragment"
+        android:name="com.xxh.learn.ui.layout.cardview.CardViewFragment"
+        android:label="CardViewFragment" />
 </navigation>
