--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -21,4 +21,10 @@
     <dimen name="peekOffset">50dp</dimen><!-- how much of adjacent pages is shown -->
 
     <dimen name="list_item_height">72dp</dimen>
+
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="seekbar_label_length">70dp</dimen>
+    <dimen name="card_elevation">100dp</dimen>
+    <dimen name="card_radius">8dp</dimen>
 </resources>
