--- a/ui/src/main/res/layout/item_text_row.xml
+++ b/ui/src/main/res/layout/item_text_row.xml
@@ -19,12 +19,13 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_item_height"
     android:layout_marginLeft="@dimen/margin_medium"
-    android:layout_marginRight="@dimen/margin_medium"
-    android:gravity="center_vertical">
+    android:layout_marginRight="@dimen/margin_medium">
 
     <TextView
         android:id="@+id/textView"
+        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="@string/element_text"/>
 </FrameLayout>
