--- a/app/src/main/res/layout/fragment_in_game.xml
+++ b/app/src/main/res/layout/fragment_in_game.xml
@@ -34,7 +34,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/str1_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +42,7 @@
         app:srcCompat="@drawable/image_category_tvmovies_raster" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/str1_tv"
         android:layout_width="0dp"
         android:layout_height="75dp"
         android:layout_marginStart="34dp"
@@ -70,7 +70,7 @@
         app:layout_constraintBottom_toTopOf="@+id/checkBox2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/str1_tv" />
 
     <CheckBox
         android:id="@+id/checkBox2"
