--- a/app/src/main/res/layout/fragment_terms_and_conditions.xml
+++ b/app/src/main/res/layout/fragment_terms_and_conditions.xml
@@ -49,7 +49,7 @@
         app:layout_constraintVertical_bias="0.8" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/str1_tv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/large_margin"
