--- a/ui/src/main/res/layout/fragment_card_view.xml
+++ b/ui/src/main/res/layout/fragment_card_view.xml
@@ -53,6 +53,7 @@
             android:orientation="horizontal">
 
             <TextView
+                style="@style/textStyle"
                 android:layout_width="@dimen/seekbar_label_length"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
